--- a/k8s/loadgen/loadgen-deploy.yaml
+++ b/k8s/loadgen/loadgen-deploy.yaml
@@ -3,24 +3,32 @@ kind: Deployment
 metadata:
   name: loadgen
   namespace: demo
+  labels:
+    app: loadgen
 spec:
-  replicas: 5
+  replicas: 30
   selector:
-    matchLabels: { app: loadgen }
+    matchLabels:
+      app: loadgen
   template:
     metadata:
-      labels: { app: loadgen }
+      labels:
+        app: loadgen
     spec:
       containers:
-      - name: busybox
-        image: busybox:1.36
-        command: ["/bin/sh","-c"]
-        args:
-          - |
-            while true; do
-              wget -q -O- http://web.demo.svc.cluster.local >/dev/null 2>&1
-            done
-        resources:
-          requests: { cpu: "50m", memory: "64Mi" }
-          limits:   { cpu: "200m", memory: "128Mi" }
+        - name: spammer
+          image: busybox:1.36
+          command: ["/bin/sh","-c"]
+          args:
+            - >
+              while true; do
+                wget -q -O- http://web.demo.svc.cluster.local/ > /dev/null || true;
+              done
+          resources:
+            requests: { cpu: "50m", memory: "64Mi" }
+            limits:   { cpu: "200m", memory: "128Mi" }
+          readinessProbe:
+            exec: { command: ["/bin/sh","-c","pgrep -f wget >/dev/null"] }
+            initialDelaySeconds: 5
+            periodSeconds: 10
 
