--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,3 +1,7 @@
 FROM nginx:1.25-alpine
+
+# Replace the default nginx index page with our own
 COPY index.html /usr/share/nginx/html/index.html
+
+EXPOSE 80
 
