--- a/k8s/deploy-green.yaml
+++ b/k8s/deploy-green.yaml
@@ -3,22 +3,44 @@ kind: Deployment
 metadata:
   name: web-green
   namespace: demo
-  labels: { app: web, color: green }
+  labels:
+    app: web
+    color: green
 spec:
   replicas: 2
   selector:
-    matchLabels: { app: web, color: green }
+    matchLabels:
+      app: web
+      color: green
   template:
     metadata:
-      labels: { app: web, color: green }
+      labels:
+        app: web
+        color: green
     spec:
       containers:
-      - name: nginx
-        image: REGION-docker.pkg.dev/PROJECT_ID/demo-repo/web:{{TAG}}
-        ports: [{ containerPort: 80 }]
-        resources:
-          requests: { cpu: "100m", memory: "128Mi" }
-          limits:   { cpu: "500m", memory: "256Mi" }
-        readinessProbe: { httpGet: { path: "/", port: 80 }, initialDelaySeconds: 3, periodSeconds: 5 }
-        livenessProbe:  { httpGet: { path: "/", port: 80 }, initialDelaySeconds: 15, periodSeconds: 20 }
+        - name: nginx
+          # Jenkins will overwrite this with ${IMAGE}:${TAG}
+          image: asia-south1-docker.pkg.dev/gke-demo-project-2025/demo-repo/web:latest
+          ports:
+            - containerPort: 80
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "500m"
+              memory: "256Mi"
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 3
+            periodSeconds: 5
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 15
+            periodSeconds: 20
 
