--- a/k8s/deploy-green.yaml
+++ b/k8s/deploy-green.yaml
@@ -3,44 +3,33 @@ kind: Deployment
 metadata:
   name: web-green
   namespace: demo
-  labels:
-    app: web
-    color: green
+  labels: { app: web, color: green }
 spec:
   replicas: 2
   selector:
-    matchLabels:
-      app: web
-      color: green
+    matchLabels: { app: web, color: green }
   template:
     metadata:
-      labels:
-        app: web
-        color: green
+      labels: { app: web, color: green }
     spec:
       containers:
-        - name: nginx
-          # Jenkins will overwrite this with ${IMAGE}:${TAG}
-          image: asia-south1-docker.pkg.dev/gke-demo-project-2025/demo-repo/web:latest
-          ports:
-            - containerPort: 80
-          resources:
-            requests:
-              cpu: "100m"
-              memory: "128Mi"
-            limits:
-              cpu: "500m"
-              memory: "256Mi"
-          readinessProbe:
-            httpGet:
-              path: /
-              port: 80
-            initialDelaySeconds: 3
-            periodSeconds: 5
-          livenessProbe:
-            httpGet:
-              path: /
-              port: 80
-            initialDelaySeconds: 15
-            periodSeconds: 20
+      - name: nginx
+        image: nginx:1.25-alpine
+        ports: [{ containerPort: 80 }]
+        resources:
+          requests: { cpu: "100m", memory: "128Mi" }
+          limits:   { cpu: "500m", memory: "256Mi" }
+        readinessProbe: { httpGet: { path: "/", port: 80 }, initialDelaySeconds: 3, periodSeconds: 5 }
+        livenessProbe:  { httpGet: { path: "/", port: 80 }, initialDelaySeconds: 15, periodSeconds: 20 }
+        volumeMounts:
+        - name: web-content
+          mountPath: /usr/share/nginx/html/index.html
+          subPath: index.html
+      volumes:
+      - name: web-content
+        configMap:
+          name: web-green-html
+          items:
+          - key: index.html
+            path: index.html
 
