--- a/k8s/deploy-blue.yaml
+++ b/k8s/deploy-blue.yaml
@@ -23,8 +23,8 @@ spec:
         livenessProbe:  { httpGet: { path: "/", port: 80 }, initialDelaySeconds: 15, periodSeconds: 20 }
         volumeMounts:
         - name: web-content
-          mountPath: /usr/share/nginx/html/index.html
-          subPath: index.html
+          mountPath: /usr/share/nginx/html
+          readOnly: true
       volumes:
       - name: web-content
         configMap:
