--- a/k8s/deploy-green.yaml
+++ b/k8s/deploy-green.yaml
@@ -3,32 +3,53 @@ kind: Deployment
 metadata:
   name: web-green
   namespace: demo
-  labels: { app: web, color: green }
+  labels:
+    app: web
+    color: green
 spec:
   replicas: 2
   selector:
-    matchLabels: { app: web, color: green }
+    matchLabels:
+      app: web
+      color: green
   template:
     metadata:
-      labels: { app: web, color: green }
+      labels:
+        app: web
+        color: green
     spec:
       containers:
       - name: nginx
         image: nginx:1.25-alpine
-        ports: [{ containerPort: 80 }]
+        ports:
+        - containerPort: 80
         resources:
-          requests: { cpu: "100m", memory: "128Mi" }
-          limits:   { cpu: "500m", memory: "256Mi" }
-        readinessProbe: { httpGet: { path: "/", port: 80 }, initialDelaySeconds: 3, periodSeconds: 5 }
-        livenessProbe:  { httpGet: { path: "/", port: 80 }, initialDelaySeconds: 15, periodSeconds: 20 }
+          requests:
+            cpu: "100m"
+            memory: "128Mi"
+          limits:
+            cpu: "500m"
+            memory: "256Mi"
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 3
+          periodSeconds: 5
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 15
+          periodSeconds: 20
         volumeMounts:
         - name: web-content
-          mountPath: /usr/share/nginx/html/index.html
-          subPath: index.html
+          mountPath: /usr/share/nginx/html
+          readOnly: true
       volumes:
       - name: web-content
         configMap:
-          name: web-green-html
+          name: web-green-html   # ✅ ensures this deployment uses the GREEN HTML
           items:
           - key: index.html
             path: index.html
