--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,13 +1,8 @@
 apiVersion: v1
 kind: Service
-metadata:
-  name: web
-  namespace: demo
+metadata: { name: web, namespace: demo }
 spec:
   type: LoadBalancer
-  selector: { app: web, color: blue }
-  ports:
-  - name: http
-    port: 80
-    targetPort: 80
+  selector: { app: web, color: blue } # Jenkins will flip this to green
+  ports: [{ port: 80, targetPort: 80 }]
 
