--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,15 +8,11 @@ on:
         required: true
         default: terraform
       name:
-        description: "Name variable"
+        description: "Value for var.name"
         required: true
         default: demo
-      auto_approve:
-        description: "Skip manual approval? (true/false)"
-        required: false
-        default: "false"
       confirm:
-        description: "Type exactly: I UNDERSTAND THIS WILL DELETE RESOURCES"
+        description: 'Type exactly: I UNDERSTAND THIS WILL DELETE RESOURCES'
         required: true
         default: ""
 
@@ -31,55 +27,104 @@ permissions:
 
 jobs:
   plan:
+    name: Plan (destroy)
     runs-on: ubuntu-latest
-    if: ${{ github.event.inputs.confirm == 'I UNDERSTAND THIS WILL DELETE RESOURCES' }}
+    env:
+      DIR:  ${{ github.event.inputs.directory }}
+      NAME: ${{ github.event.inputs.name }}
     steps:
-      - uses: actions/checkout@v4
-      - uses: google-github-actions/auth@v2
-        with: { credentials_json: ${{ secrets.GCP_SA_KEY }} }
-      - uses: google-github-actions/setup-gcloud@v2
-        with: { project_id: ${{ env.PROJECT_ID }} }
-      - uses: hashicorp/setup-terraform@v3
-      - name: Terraform Init
+      - name: Validate confirmation
         run: |
-          terraform -chdir="${{ github.event.inputs.directory }}" init -input=false -reconfigure \
+          if [ "${{ github.event.inputs.confirm }}" != "I UNDERSTAND THIS WILL DELETE RESOURCES" ]; then
+            echo "::error::Confirmation text mismatch. Enter exactly: I UNDERSTAND THIS WILL DELETE RESOURCES"
+            exit 1
+          fi
+
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Auth to GCP
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Setup gcloud
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ env.PROJECT_ID }}
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.9.5
+
+      - name: Terraform Init (GCS backend)
+        run: |
+          terraform -chdir="$DIR" init -input=false -reconfigure \
             -backend-config="bucket=${TF_STATE_BUCKET}" \
             -backend-config="prefix=gke/state"
-      - run: terraform -chdir="${{ github.event.inputs.directory }}" validate
-      - name: Plan (destroy)
+
+      - name: Terraform Validate
+        run: terraform -chdir="$DIR" validate
+
+      - name: Terraform Plan (destroy)
         run: |
-          terraform -chdir="${{ github.event.inputs.directory }}" plan -destroy -input=false -out=tfplan.destroy \
-            -var="project_id=${PROJECT_ID}" -var="region=${REGION}" -var="zone=${ZONE}" \
-            -var="name=${{ github.event.inputs.name }}"
-      - run: terraform -chdir="${{ github.event.inputs.directory }}" show -no-color tfplan.destroy | tee destroy-plan.txt
-      - uses: actions/upload-artifact@v4
+          terraform -chdir="$DIR" plan -destroy -input=false -out=tfplan.destroy \
+            -var="project_id=${PROJECT_ID}" \
+            -var="region=${REGION}" \
+            -var="zone=${ZONE}" \
+            -var="name=${NAME}"
+
+      - name: Show Plan Summary
+        run: terraform -chdir="$DIR" show -no-color tfplan.destroy | tee "$DIR/destroy-plan.txt"
+
+      - name: Upload destroy plan
+        uses: actions/upload-artifact@v4
         with:
           name: tf-destroy-plan
           path: |
             ${{ github.event.inputs.directory }}/tfplan.destroy
-            destroy-plan.txt
+            ${{ github.event.inputs.directory }}/destroy-plan.txt
 
   apply:
+    name: Apply (destroy)
     needs: plan
     runs-on: ubuntu-latest
-    if: ${{ needs.plan.result == 'success' && github.event.inputs.auto_approve == 'true' }}
-    environment: { name: production }   # Gate with Environment approval if you want
+    environment:
+      name: production   # Configure required reviewers in Repo Settings → Environments
+    env:
+      DIR:  ${{ github.event.inputs.directory }}
     steps:
-      - uses: actions/checkout@v4
-      - uses: google-github-actions/auth@v2
-        with: { credentials_json: ${{ secrets.GCP_SA_KEY }} }
-      - uses: google-github-actions/setup-gcloud@v2
-        with: { project_id: ${{ env.PROJECT_ID }} }
-      - uses: hashicorp/setup-terraform@v3
-      - name: Terraform Init
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Auth to GCP
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Setup gcloud
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ env.PROJECT_ID }}
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.9.5
+
+      - name: Terraform Init (GCS backend)
         run: |
-          terraform -chdir="${{ github.event.inputs.directory }}" init -input=false -reconfigure \
+          terraform -chdir="$DIR" init -input=false -reconfigure \
             -backend-config="bucket=${TF_STATE_BUCKET}" \
             -backend-config="prefix=gke/state"
-      - uses: actions/download-artifact@v4
+
+      - name: Download plan
+        uses: actions/download-artifact@v4
         with:
           name: tf-destroy-plan
           path: ${{ github.event.inputs.directory }}
-      - name: Apply (destroy)
-        run: terraform -chdir="${{ github.event.inputs.directory }}" apply -input=false -auto-approve tfplan.destroy
+
+      - name: Terraform Apply (destroy)
+        run: terraform -chdir="$DIR" apply -input=false -auto-approve tfplan.destroy
 
